--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,39 +1,54 @@
-name: Deploy to Ncloud server
+name: 🚀 Deploy to Ncloud Server
 
 on:
   push:
-    branches: [ main ]   # main 브랜치에 push 될 때마다 실행
+    branches:
+      - main   # main 브랜치 push 시 자동 실행
 
 jobs:
   deploy:
+    name: Deploy to Ncloud
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: 🧩 Checkout Repository
         uses: actions/checkout@v4
 
-      - name: SSH & deploy
-        uses: appleboy/ssh-action@v1.0.3
+      - name: 🔑 Connect & Deploy to Server
+        uses: appleboy/ssh-action@v1.1.0
         with:
-          host: 175.45.194.202          # ★ 여기 서버 IP로 변경
-          username: root                 # 지금 접속하는 계정
-          key: ${{ secrets.CI_SSH_KEY }} # 아까 만든 GitHub Secret 이름
+          host: 175.45.194.202          # ✅ 서버 IP
+          username: root                # ✅ 접속 계정
+          key: ${{ secrets.SSH_PRIVATE_KEY }}  # ✅ 깃허브 시크릿에 등록한 개인키 이름
           script: |
             echo "✅ Connected to server"
-            cd /root/im-bank-n8n-agent
 
-            # git 최신 코드 가져오기
+            # 1️⃣ 레포가 없으면 클론
+            if [ ! -d "/root/im-bank-n8n-agent" ]; then
+              cd /root
+              git clone https://github.com/jihun-moon/im-bank-n8n-agent.git
+            fi
+
+            # 2️⃣ 최신 코드로 갱신
+            cd /root/im-bank-n8n-agent
             git pull origin main
 
-            # 백엔드 의존성 설치 (처음/변경 시)
+            # 3️⃣ 백엔드 업데이트 및 실행
             cd backend
             npm install
-            # pm2로 백엔드 재시작 (나중에 pm2 설치 후 사용)
-            # pm2 restart im-bank-backend || pm2 start server.js --name im-bank-backend
 
-            # 프론트엔드 빌드 (선택)
-            cd ../frontend
-            npm install
-            npm run build
+            # PM2 설치 (처음 한 번만)
+            if ! command -v pm2 &> /dev/null; then
+              npm install -g pm2
+            fi
 
-            echo "🚀 Deploy finished"
+            # 기존 프로세스 재시작 또는 새로 시작
+            if pm2 list | grep -q imbank-backend; then
+              pm2 restart imbank-backend
+            else
+              pm2 start server.js --name imbank-backend
+            fi
+
+            pm2 save
+
+            echo "🚀 Backend deployed successfully!"
