--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# --- 사용자 추가 ---
+
+# 백엔드 런타임 데이터 (로그 및 변동되는 JSON 데이터)
+backend/data/logs.json
+# kb.json도 프로그램이 실행되면서 내용이 바뀐다면 아래 주석(#)을 푸세요.
+# backend/data/kb.json
+
+# 프론트엔드 빌드 결과물
+frontend/build/
+
+# OS 파일
+.DS_Store
+Thumbs.db
+
 # Logs
 logs
 *.log
